# ogle

./: .gitignore  CMakeLists.txt  EDITOR_DECOMPOSITION_PLAN.md  Grid_AxisGizmo_Task.md  README.md  README_ru.md  build.bat  generate_solution.bat  imgui.ini  js.md  log.txt
.github/: copilot-instructions.md
assets/: spiderExport.stl.glb
assets/config/: app_config.json
assets/scripts/: startup.js  test_world.js
assets/scripts/internal/: api_bootstrap.js
assets/shaders/: debug_line.vs  default.fs  default.vs  grid.fs  grid.vs  shadow.vs
assets/worlds/: default_world.json
data/shaders/: simple_fragment.glsl
doc/: api_core.md  api_index.md  api_input.md  api_managers.md  api_render.md  api_scene.md  api_systems.md  api_test.md  api_ui.md  api_window.md  improvements.md  llm.md  material_system.md
docs/: README.md  js.md
docs/mdocs/: CMakeLists.txt  Editor_EventBus_Refactor_Task.md  Grid_AxisGizmo_Task.md  PROCEDURAL_TEXTURE_ENGINE.md  TEXTURE_ENGINE_SUMMARY.md  TextureManager_Implementation_Task.md  net.md  readme.md
docs/mdocs/include/: NetworkClient.h
mdocs/include/: NetworkServer.h
mdocs/src/: NetworkClient.cpp  NetworkServer.cpp
res/: app.rc  test_material.json
scripts/: test_world.js
src/: App.cpp  App.h  Logger.cpp  Logger.h  WorldGenerator.cpp  WorldGenerator.h  main.cpp
src/config/: AppConfig.h  ConfigManager.cpp  ConfigManager.h
src/core/: Engine.cpp  Engine.h  EventBus.h  EventSystem.h  Events.h  ExampleLayer.cpp  ExampleLayer.h  FileSystem.cpp  FileSystem.h  ISystem.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h
src/editor/: Editor.cpp  Editor.h  EditorAnimationPanel.cpp  EditorAnimationPanel.h  EditorAssetHelpers.cpp  EditorAssetHelpers.h  EditorContentBrowserPanel.cpp  EditorContentBrowserPanel.h  EditorCreationPanel.cpp  EditorCreationPanel.h  EditorHierarchyPanel.cpp  EditorHierarchyPanel.h  EditorInspectorPanel.cpp  EditorInspectorPanel.h  EditorMeshEditPanel.cpp  EditorMeshEditPanel.h  EditorProceduralTexturePanel.cpp  EditorProceduralTexturePanel.h  EditorState.h
src/engine/: Camera.h  Engine.cpp  Engine.h  Entity.cpp  Entity.h  InputConfigurator.cpp  InputConfigurator.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h
src/engine/input/: InputAction.cpp  InputAction.h  InputAxis.cpp  InputAxis.h  InputContext.cpp  InputContext.h  InputEvents.h  InputSystem.cpp  InputSystem.h  KeyCodes.h  KeyboardState.cpp
src/input/: AxisBinding.cpp  AxisBinding.h  InputAction.cpp  InputAction.h  InputAxis.h  InputConfigurator.cpp  InputConfigurator.h  InputController.cpp  InputController.h  InputSystem.h  InputTypes.h  KeyboardState.h
src/log/: Logger.cpp  Logger.h
src/managers/: CameraManager.cpp  CameraManager.h  ImGuiManager.cpp  ImGuiManager.h  InputActionsManager.cpp  InputActionsManager.h  InputManager.cpp  InputManager.h  PhysicsManager.cpp  PhysicsManager.h  RenderManager.cpp  RenderManager.h  SceneManager.cpp  SceneManager.h  ScriptManager.cpp  ScriptManager.h  TimeManager.cpp  TimeManager.h  WorldManager.cpp  WorldManager.h
src/models/: BaseModel.cpp  BaseModel.h  MeshBuffer.cpp  MeshBuffer.h  ModelEntity.cpp  ModelEntity.h  ModelSerializer.cpp  ModelSerializer.h  PrimitiveFactory.cpp  PrimitiveFactory.h  default.frag  default.vert
src/opengl/: Camera.cpp  Camera.h  DomoScene.cpp  DomoScene.h  GLFunctions.cpp  GLFunctions.h  OpenGLDebug.cpp  OpenGLDebug.h  OpenGLInitializer.cpp  OpenGLInitializer.h  OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLUtils.h  Shader.cpp  Shader.h  ShaderManager.cpp  ShaderManager.h
src/physics/: BulletPhysicsEngine.cpp  BulletPhysicsEngine.h  IPhysicsEngine.h
src/render/: AnimationLibrary.cpp  AnimationLibrary.h  Camera.cpp  Camera.h  LightContext.cpp  LightContext.h  Material.cpp  Material.h  MaterialController.cpp  MaterialController.h  MaterialLibrary.cpp  MaterialLibrary.h  ProceduralTexture.cpp  ProceduralTexture.h  Renderer.cpp  Renderer.h  Shader.cpp  ShaderController.cpp  ShaderController.h  Texture2D.cpp  Texture2D.h  TextureController.cpp  TextureController.h  TextureGenerator.cpp  TextureGenerator.h  TextureManager.cpp  TextureManager.h
src/render/material/: JsonMaterialSerializer.cpp  JsonMaterialSerializer.h  Material.cpp  Material.h  MaterialControllerImpl.cpp  MaterialControllerImpl.h
src/render/shader/: ShaderControllerImpl.cpp  ShaderControllerImpl.h  ShaderProgram.cpp  ShaderProgram.h
src/render/shader/internal/: ShaderCache.cpp  ShaderCache.h  ShaderCompiler.cpp  (+5 more)
src/render/texture/: Texture.cpp  Texture.h  TextureControllerImpl.cpp  TextureControllerImpl.h  TextureLoader.cpp  TextureLoader.h
src/scene/: Components.h  Entity.cpp  Entity.h  JsonSceneSerializer.cpp  JsonSceneSerializer.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Scene.cpp  Scene.h  SceneComponent.cpp  SceneComponent.h
src/scripting/: IScriptBinding.h  Player.cpp  Player.h  ScriptApi.cpp  ScriptApi.h  ScriptBindings.cpp  ScriptBindings.h  ScriptEngine.cpp  ScriptEngine.h  ScriptTypeMapping.h
src/scripting/bindings/: AnimationBindings.cpp  AnimationBindings.h  Common.cpp  Common.h  EntityBindings.cpp  EntityBindings.h  LightBindings.cpp  LightBindings.h  LogBindings.cpp  LogBindings.h  MaterialBindings.cpp  MaterialBindings.h  PhysicsBindings.cpp  PhysicsBindings.h  ShaderBindings.cpp  ShaderBindings.h  WorldBindings.cpp  WorldBindings.h
src/systems/: GuiSystem.cpp  GuiSystem.h  InputSystem.cpp  InputSystem.h  RenderSystem.cpp  RenderSystem.h  WindowSystem.cpp  WindowSystem.h
src/test/: TestCube.cpp  TestCube.h  TestCubeUI.cpp  TestCubeUI.h
src/ui/: IWindow.h  UIController.cpp  UIController.h  UIEnums.h  UIStyle.h  UIWidgets.h  UIWindow.h  Win32Window.cpp  Win32Window.h
src/window/: BaseWindow.cpp  BaseWindow.h  MainWindow.cpp  MainWindow.h  OpenGLContext.cpp  OpenGLContext.h
src/world/: IWorldAccess.h  SceneSerializer.cpp  SceneSerializer.h  World.cpp  World.h  WorldComponents.h  WorldObject.cpp  WorldObject.h
src/world/systems/: AnimationSystem.cpp  AnimationSystem.h  RenderSystem.cpp  RenderSystem.h  TransformSystem.cpp  TransformSystem.h
